--- a/public/test/index.html
+++ b/public/test/index.html
@@ -144,7 +144,7 @@ goto first step (or shut off burner when done)
 <p>Notice again how text always lines up on 4-space indents (including
 that last line which continues item 3 above).</p>
 
-<p>Here&rsquo;s a link to <a href="http://foo.bar">a website</a>, to a <a href="local-doc.html">local
+<p>Here&rsquo;s a link to <a href="http://foo.bar" target="_blank">a website</a>, to a <a href="local-doc.html" target="_blank">local
 doc</a>, and to a <a href="#an-h2-header">section heading in the current
 doc</a>. Here&rsquo;s a footnote <sup class="footnote-ref" id="fnref:190c09867523d23ce822c8890edce6ee:1"><a rel="footnote" href="#fn:190c09867523d23ce822c8890edce6ee:1">1</a></sup>.</p>
 
